<resources>
    <string name="app_name" translatable="false">Jiffy Ambient</string>

    <string name="sign_in">เข้าสู่ระบบ</string>
    <string name="logout">ลงชื่อออก</string>
    <string name="user">ชื่อผู้ใช้งาน</string>
    <string name="password">รหัสผ่าน</string>
    <string name="driver_name">ชื่อ</string>
    <string name="truck">รถ</string>
    <string name="license">ทะเบียนรถ</string>
    <string name="joblist">รอบงาน</string>
    <string name="name">.....</string>
    <string name="date">วันที่</string>
    <string name="job">เลขที่งาน</string>
    <string name="store">สาขา</string>
    <string name="time">กำหนดถึง</string>
    <string name="external_dir">Img</string>
    <string name="container">บรรจุภัณฑ์</string>
    <string name="no">เลขที่</string>
    <string name="quantity">จำนวน</string>
    <string name="clear">ลบ</string>
    <string name="textview">TextView</string>
    <string name="store_qty">จำนวนสาขา</string>
    <string name="signature">ลายเซ็นต์</string>
    <string name="full_name">ชื่อ - นามสกุล</string>
    <string name="save">บันทึก</string>
    <string name="cancel">ยกเลิก</string>
    <string name="place">สาขา</string>
    <string name="err_gps1">ผิดพลาดไม่ได้รับ Lat/Long กรุณาลองใหม่อีกครั้ง</string>
    <string name="err_gps2">กรุณากดเมื่ออยู่ที่จุดหมายปลายทางแล้ว</string>
    <string name="err_conf1">กรุณาถ่ายภาพก่อนบันทึก</string>
    <string name="save_comp">ยินดีด้วย บันทึกสำเร็จแล้ว!!</string>
    <string name="save_incomp">เสียใจด้วย บันทึกผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
    <string name="waiting">กรุณารอสักครู่...</string>
    <string name="loading">กำลังโหลด...</string>
    <string name="store_code">เลขที่สาขา</string>
    <string name="store_name">ชื่อสาขา</string>
    <string name="call">เบอร์โทร</string>
    <string name="add_img_comp">ยินดีด้วย บันทึกรูปภาพสำเร็จแล้ว!!</string>
    <string name="add_img_incomp">เสียใจด้วย บันทึกรูปภาพผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
    <string name="add_gps_comp">ยินดีด้วย บันทึก Lat/Long สำเร็จแล้ว!!</string>
    <string name="add_gps_incomp">เสียใจด้วย บันทึก Lat/Long ผิดพลาด กรุณาลองใหม่อีกครั้ง</string>
    <string name="ok">รับทราบ</string>
    <string name="have_space_title">มีช่องว่าง</string>
    <string name="have_space_detail">กรุณากรอกข้อมูลให้ครบทุกช่อง!!</string>
    <string name="user_false_title">ชื่อผู้ใช้ผิดพลาด</string>
    <string name="user_false_detail">ไม่มีชื่อผู้ใช้ในฐานข้อมูลของเรา</string>
    <string name="pass_false_title">รหัสผ่านผิดพลาด</string>
    <string name="pass_false_detail">คุณใส่รหัสผ่านผิด กรุณาลองใหม่อีกครั้ง</string>
    <string name="err_not_name">กรุณาใส่ชื่อของคุณ</string>
    <string name="start_load">บันทึกเวลาเริ่มโหลดเรียบร้อย</string>
    <string name="fin_load">บันทึกเวลาโหลดเสร็จเรียบร้อย</string>
    <string name="Qty">จำนวน</string>
    <string name="confirm">เรียบร้อย</string>
    <string name="back">กลับ</string>
    <string name="confirm_miles">กรุณาใส่เลขไมล์</string>
    <string name="add_miles">ใส่เลขไมล์...</string>
    <string name="err_internet">เครือข่ายขัดข้อง กรุณาลองใหม่อีกครั้ง</string>
</resources>