<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:background="#222222"
        android:padding="@dimen/mini_margin"
        android:gravity="center_vertical"
        android:layout_width="320dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/ic_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/confirm_miles"
            android:textSize="@dimen/h2"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/edtMiles"
        android:layout_margin="@dimen/margin"
        android:inputType="number"
        android:textSize="@dimen/h3"
        android:hint="@string/add_miles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/mini_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="@dimen/h_button" />

        <Button
            android:id="@+id/btnDialogConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="@dimen/h_button" />
    </LinearLayout>

</LinearLayout>