<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/AppWallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hitachi_tstv.mist.it.pod_jiffy_ambient.ServiceActivity">

    <ListView
        android:id="@+id/listJob"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linTopService"
        android:background="@drawable/layout_bg2" />

    <LinearLayout
        android:id="@+id/linTopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/mini_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_bg2"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:srcCompat="@drawable/male" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/driver_name"
                        android:textSize="@dimen/h3"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/name"
                        android:textSize="@dimen/h3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="1dp"
                        android:text="@string/truck"
                        android:textSize="@dimen/h3"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/license"
                        android:textSize="@dimen/h3" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/h3"
            android:background="@drawable/silver_button"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/holo_green_button"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"

                android:text="@string/job"
                android:textSize="@dimen/h3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:text="@string/store"
                android:textSize="@dimen/h3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="2"
                android:text="@string/time"
                android:textSize="@dimen/h3"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>