<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/AppWallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hitachi_tstv.mist.it.pod_jiffy_ambient.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/silver_button"
        android:elevation="0dp"
        android:text="@string/sign_in"
        android:textSize="@dimen/h_button" />

    <LinearLayout
        android:layout_width="@dimen/block"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        android:background="@drawable/white_button"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            app:srcCompat="@drawable/logo_etg3" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/sign_in"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/h2" />

    </LinearLayout>

</RelativeLayout>
