<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_job"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/AppWallpaper"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.hitachi_tstv.mist.it.pod_jiffy_ambient.DetailJob">

    <LinearLayout
        android:id="@+id/linTopDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:orientation="vertical"
        android:padding="@dimen/mini_margin">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h2"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/white1_button"
            android:orientation="vertical"
            android:padding="@dimen/mini_margin">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mini_margin"
                android:layout_marginRight="@dimen/mini_margin"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:textSize="@dimen/h3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_menu_call"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mini_margin"
                    android:layout_marginRight="@dimen/mini_margin"
                    android:layout_weight="5"
                    android:textSize="@dimen/h3" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linBelow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linTopDetail"
        android:layout_marginTop="@dimen/mini_margin"
        android:background="@drawable/layout_bg2"
        android:orientation="horizontal"
        android:padding="@dimen/mini_margin">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="@dimen/h3" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/container"
            android:textSize="@dimen/h3" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="@dimen/h3" />
    </LinearLayout>

    <ListView
        android:id="@+id/livContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linBottomDetail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linBelow"
        android:background="@drawable/layout_bg2"
        android:padding="@dimen/mini_margin" />

    <LinearLayout
        android:id="@+id/linBottomDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray"
                android:padding="2dp"
                app:srcCompat="@drawable/picture" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="57dp"
                android:layout_height="@dimen/picture_height"
                android:layout_marginBottom="@dimen/mini_margin"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/mini_margin"
                android:layout_marginTop="@dimen/mini_margin"
                android:background="@android:color/darker_gray"
                android:padding="2dp"
                app:srcCompat="@drawable/picture"
                android:layout_marginEnd="@dimen/mini_margin"
                android:layout_marginStart="15dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray"
                android:padding="2dp"
                app:srcCompat="@drawable/picture" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray"
                android:padding="2dp"
                app:srcCompat="@drawable/picture" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="@dimen/picture_width"
                android:layout_height="@dimen/picture_height"
                android:layout_margin="@dimen/mini_margin"
                android:background="@android:color/darker_gray"
                android:padding="2dp"
                app:srcCompat="@drawable/picture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/sign" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/saveimgth" />

        </LinearLayout>

        <!--LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/start" />

            <Button
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/fin" />
        </LinearLayout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/here" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/submit" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/return_con" />

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/mini_margin"
                android:layout_weight="1"
                android:background="@drawable/btnback" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
